Add changes in deal